Fixed some problems in information du point deau, edited getallbites and changed it with a dunction that can run on java8, made the project runnable on java8